--- a/public/views/templates/app/droparea.html
+++ b/public/views/templates/app/droparea.html
@@ -1,8 +1,14 @@
-<div class="app-section" id="app-droparea">
-	<h2>Drop the exported file from F-Secure Key</h2>
-			<div id="droptarget">
-				Here
-			</div>
-	<!-- <button class="btn btn-primary">Or paste</button> -->
-	<textarea id="pasteinput"></textarea>
+<div class="app-section">
+	<h2 id="headline">Drop the exported file from F-Secure Key</h2>
+	<!-- <button id="demobtn" class="btn">do</button> -->
+	<div id="droptarget">
+		Here
+	</div>
+	<div id="app-results">
+		<div class="form-group">
+			<a href="#" class="btn btn-primary btn-lg" id="download-results">Download CSV</a>
+			<!-- <textarea rows=10 class="form-control" id="parseoutput"></textarea> -->
+		</div>
+		<p><i>At least LastPass can use this format, customizable output is work-on-progress</i></p>
+	</div>
 </div>
