--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -13,9 +13,9 @@ html(lang="en")
 		script(src="//code.jquery.com/jquery-1.11.3.min.js")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
 		
-		if (production)
-			script(src="/js/build.js")
-		else		
+		if (env.debugjs)
 			script(src="/debugjs/alerts.js")
 			script(src="/debugjs/droparea.js")
 			script(src="/debugjs/parser.js")
+		else		
+			script(src="/js/build.js")
