Jade layouts, clipboard support, error handling

--- a/public/views/app.jade
+++ b/public/views/app.jade
@@ -1,4 +1,18 @@
-div(class="container")
-	div(class="app-content")
-		div(id="app-alerts")
-		include templates/app/droparea.html
+extends ./layout.jade
+
+block content
+	div(class="container")
+		div(class="app-content")
+			div(id="app-alerts")
+			include templates/app/droparea.html
+			
+block js			
+	script(src="/assets/zeroclipboard/dist/ZeroClipboard.min.js")
+	script(src="/assets/json3/lib/json3.min.js")
+
+	if (settings.env.debugjs)
+		script(src="/debugjs/alerts.js")
+		script(src="/debugjs/droparea.js")
+		script(src="/debugjs/parser.js")
+	else		
+		script(src="/js/build.js")
