--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -1,21 +1,17 @@
+doctype html
 html(lang="en")
 	head
+		title= settings.title
 		include templates/head.html
 		link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 		link(rel="stylesheet", href="/css/site.css")
 		
 	body
-		include templates/navbar.html
+		include templates/navbar.jade
 		
-		include app.jade
-
-		script(src="/assets/json3/lib/json3.min.js")
+		block content
+		
 		script(src="//code.jquery.com/jquery-1.11.3.min.js")
 		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
 		
-		if (env.debugjs)
-			script(src="/debugjs/alerts.js")
-			script(src="/debugjs/droparea.js")
-			script(src="/debugjs/parser.js")
-		else		
-			script(src="/js/build.js")
+		block js
