--- a/public/views/templates/app/droparea.html
+++ b/public/views/templates/app/droparea.html
@@ -6,8 +6,10 @@
 	</div>
 	<div id="app-results">
 		<div class="form-group">
-			<a href="#" class="btn btn-primary btn-lg" id="download-results">Download CSV</a>
-			<!-- <textarea rows=10 class="form-control" id="parseoutput"></textarea> -->
+			<a href="#" class="btn btn-primary btn-lg" id="download-results">Download</a>
+			<button class="btn btn-primary btn-lg" id="copy-results" data-clipboard-target="csv-output">Copy to clipboard</button>
+			<button class="btn btn-primary btn-lg" id="show-results">Show</button>
+			<textarea rows=10 class="form-control" id="csv-output"></textarea>
 		</div>
 		<p><i>At least LastPass can use this format, customizable output is work-on-progress</i></p>
 	</div>
