--- a/public/css/site.css
+++ b/public/css/site.css
@@ -38,10 +38,11 @@ body {
 	transform: scale(0.0) rotateY(180deg);
 	opacity: 0;
 }
+#csv-output {
+	margin-top: 5rem;
+	margin-bottom: 5rem;
+}
 
 #pasteinput {
 	display: none;
-}
-#app-results {
-	padding-top: 10rem;
 }
