Suggested filename for download

--- a/public/views/templates/app/droparea.html
+++ b/public/views/templates/app/droparea.html
@@ -6,7 +6,7 @@
 	</div>
 	<div id="app-results">
 		<div class="form-group">
-			<a href="#" class="btn btn-primary btn-lg" id="download-results">Download</a>
+			<a href="#" download="FSecureKey.CSV" class="btn btn-primary btn-lg" id="download-results">Download</a>
 			<button class="btn btn-primary btn-lg" id="copy-results" data-clipboard-target="csv-output">Copy to clipboard</button>
 			<button class="btn btn-primary btn-lg" id="show-results">Show</button>
 			<textarea rows=10 class="form-control" id="csv-output"></textarea>
