Dropdown menus, reorganizing structure, site-conf

--- a/public/views/about.jade
+++ b/public/views/about.jade
@@ -1,6 +1,6 @@
-extends ./layout
+extends layouts/page
 
 block content
   div(class="container")
     div(class="app-content")
-      include templates/about.html
+      include html/about.html
