--- a/public/views/html/about.html
+++ b/public/views/html/about.html
@@ -1,2 +1,6 @@
 <h1>F-Secure Key export parser tool</h1>
+<p>
 by <a href="http://sessio.fi">sessio</a>
+</p>
+<p>
+<a href="https://github.com/sessio/KeyParser">GitHub</a>
